# sqlmesh-mcp

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  push_to_github.sh  pyproject.toml
src/sqlmesh_mcp/: __init__.py  server.py
